<resources>
    <string name="app_name">描喵</string>
    <string name="app_copyrights">Copyrights ©2018 ZHANGSHIRONG</string>
    <string name="app_package">com.zhangshirong.miaomiao</string>
    <string name="permission_denied">获取权限失败</string>


    <string name="nav_note">&#xe6a1;</string>
    <string name="nav_me">&#xe6a2;</string>

    <string name="login_nav_title">登录描喵</string>
    <string name="login_nav_button_register">去注册</string>
    <string name="login_input_username_digits">abcdefghijklmnopqrstuvwxyz0123456789_.@</string>
    <string name="login_input_username_hint">邮箱或手机号</string>
    <string name="login_input_password_hint">密码</string>
    <string name="login_button_login">登录</string>

    <string name="register_nav_title">用户注册</string>
    <string name="register_input_email_digits">abcdefghijklmnopqrstuvwxyz0123456789_.@</string>
    <string name="register_input_nickname_hint">用户昵称</string>
    <string name="register_input_email_hint">邮箱</string>
    <string name="register_input_phone_hint">手机号</string>
    <string name="register_input_password_hint">密码</string>
    <string name="register_input_cpassword_hint">确认密码</string>
    <string name="register_button_registe">立即注册</string>

    <string name="main_nav_note">笔记</string>
    <string name="main_nav_me">我</string>

    <string name="main_note_pager_miao">喵</string>
    <string name="main_note_pager_note">我的笔记</string>
    <string name="main_note_pager_test">我的测试</string>

    <string name="main_note_index_daytext">当你下定决心出发时，最困难的时刻就已经过去了。</string>
    <string name="main_note_index_notecout1">共</string>
    <string name="main_note_index_notecout2">本笔记，</string>
    <string name="main_note_index_notecout3">页</string>

    <string name="main_note_test_detail11">页，</string>
    <string name="main_note_test_detail12">个测试点，用时</string>
    <string name="main_note_test_detail13">分钟</string>
    <string name="main_note_test_percent">%</string>
    <string name="main_note_test_score">分</string>

</resources>
