<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context="com.zhangshirong.miaomiao.View.Register.ActivityRegister">
    <RelativeLayout
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="300dp">
        <ImageView
            android:layout_marginBottom="105dp"
            android:layout_alignParentBottom="true"
            android:scaleType="fitCenter"
            android:src="@drawable/register"
            android:layout_width="match_parent"
            android:layout_height="130dp" />
    </RelativeLayout>
    <LinearLayout
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="@dimen/navHeaderHeight">
        <LinearLayout
            android:gravity="left"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp">
            <TextView
                android:textSize="@dimen/navTextSize"
                android:layout_marginRight="20dp"
                android:text="@string/register_nav_title"
                android:textColor="@color/colorFontLight"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_centerVertical="true"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_marginTop="150dp"
            android:background="@drawable/input_field"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:layout_marginBottom="40dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:hint="@string/register_input_nickname_hint"
                android:textColor="@color/colorFontInput"
                android:textColorHint="@color/colorFontInputHint"
                android:textSize="@dimen/textSize"
                android:background="@null"
                android:layout_width="match_parent"
                android:layout_height="40dp" />
            <View
                android:background="@color/colorInputFieldLine"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                ></View>
            <EditText
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:digits="@string/register_input_email_digits"
                android:hint="@string/register_input_email_hint"
                android:textColor="@color/colorFontInput"
                android:textColorHint="@color/colorFontInputHint"
                android:textSize="@dimen/textSize"
                android:background="@null"
                android:layout_width="match_parent"
                android:layout_height="40dp" />
            <View
                android:background="@color/colorInputFieldLine"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                ></View>
            <EditText
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:inputType="phone"
                android:hint="@string/register_input_phone_hint"
                android:textColor="@color/colorFontInput"
                android:textColorHint="@color/colorFontInputHint"
                android:textSize="@dimen/textSize"
                android:background="@null"
                android:layout_width="match_parent"
                android:layout_height="40dp" />
            <View
                android:background="@color/colorInputFieldLine"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                ></View>
            <EditText
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:inputType="textPassword"
                android:hint="@string/register_input_password_hint"
                android:textColor="@color/colorFontInput"
                android:textColorHint="@color/colorFontInputHint"
                android:textSize="@dimen/textSize"
                android:background="@null"
                android:layout_width="match_parent"
                android:layout_height="40dp" />
            <View
                android:background="@color/colorInputFieldLine"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                ></View>
            <EditText
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:inputType="textPassword"
                android:hint="@string/register_input_cpassword_hint"
                android:textColor="@color/colorFontInput"
                android:textColorHint="@color/colorFontInputHint"
                android:textSize="@dimen/textSize"
                android:background="@null"
                android:layout_width="match_parent"
                android:layout_height="40dp" />
        </LinearLayout>
        <Button
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:textSize="@dimen/textSize"
            android:textColor="@color/colorFontLight"
            android:text="@string/register_button_registe"
            android:minHeight="0dp"
            android:padding="12dp"
            android:focusable="true"
            android:clickable="true"
            android:background="@drawable/button"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
</RelativeLayout>
