<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context="com.zhangshirong.miaomiao.Module.Login.ActivityLogin">
    <View
        android:background="@drawable/loginbg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"></View>
    <LinearLayout
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="@dimen/navHeaderHeight">
        <LinearLayout
            android:gravity="left"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp">
            <TextView
                android:textSize="@dimen/navTextSize"
                android:layout_marginRight="20dp"
                android:text="@string/login_nav_title"
                android:textColor="@color/colorFontLight"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />
        </LinearLayout>

        <LinearLayout
            android:gravity="right"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent">
            <TextView
                android:textSize="@dimen/navTextSize"
                android:layout_marginLeft="20dp"
                android:text="@string/login_nav_button_register"
                android:textColor="@drawable/click_text"
                android:gravity="center"
                android:clickable="true"
                android:focusable="true"
                android:id="@+id/login_go_register"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />
        </LinearLayout>
    </LinearLayout>
    <ImageView
        android:translationY="-110dp"
        android:layout_centerVertical="true"
        android:scaleType="fitCenter"
        android:src="@drawable/login"
        android:layout_width="match_parent"
        android:layout_height="120dp" />
    <LinearLayout
        android:layout_centerVertical="true"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_marginTop="150dp"
            android:background="@drawable/input_field"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:layout_marginBottom="40dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:digits="@string/login_input_username_digits"
                android:hint="@string/login_input_username_hint"
                android:textColor="@color/colorFontInput"
                android:textColorHint="@color/colorFontInputHint"
                android:textSize="@dimen/textSize"
                android:background="@null"
                android:layout_width="match_parent"
                android:layout_height="40dp" />
            <View
                android:background="@color/colorInputFieldLine"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                ></View>
            <EditText
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:inputType="textPassword"
                android:hint="@string/login_input_password_hint"
                android:textColor="@color/colorFontInput"
                android:textColorHint="@color/colorFontInputHint"
                android:textSize="@dimen/textSize"
                android:background="@null"
                android:layout_width="match_parent"
                android:layout_height="40dp" />
        </LinearLayout>
        <Button
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:textSize="@dimen/textSize"
            android:textColor="@color/colorFontLight"
            android:text="@string/login_button_login"
            android:minHeight="0dp"
            android:padding="12dp"
            android:focusable="true"
            android:clickable="true"
            android:background="@drawable/button"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
</RelativeLayout>
